@@ -1,3 +1,9 @@
+2019-02-24  Mark Wielaard  <mark@klomp.org>
+
+	* linux-kernel-modules.c (intuit_kernel_bounds): Init *notes before
+	fopen.
+	(dwfl_linux_kernel_report_kernel): Remove fake note init empty asm.
+
 2019-01-25  Yonghong Song  <yhs@fb.com>
 
 	* linux-proc-maps.c (proc_maps_report): Use PRIu64, not PRIi64, to
